<resources>

    <string name="app_name">Unicode Tester</string>

    <string name="activity_title_code_point_list">Code Point List</string>

    <string name="menu_title_select">Select code point from the list</string>
    <string name="menu_title_input">Input code point directly</string>
    <string name="menu_title_share">Share input text</string>
    <string name="menu_title_jump">Jump to the specified position</string>

    <string name="hint_main_text">Please input</string>

    <string name="message_input_code_point">Please input code point.\n(0000 &#8211; 10FFFF)</string>
    <string name="message_confirm_code_point">Are you sure about this?</string>

    <string name="button_clear">clear</string>

    <string name="label_main_text">Analysis Target:</string>
    <string name="label_analysis_results">Analysis Result:</string>

    <string name="label_code_point">Code Point</string>
    <string name="label_java_char">Java char</string>
    <string name="label_category">General Category</string>
    <string name="label_script">Character Script</string>
    <string name="label_block">Character Block</string>
    <string name="label_name">Unicode Name</string>
    <string name="label_directionality">Directionality Property</string>
    <string name="label_utf_8">UTF-8</string>
    <string name="label_utf_16be">UTF-16BE</string>
    <string name="label_utf_16le">UTF-16LE</string>
    <string name="label_utf_32be">UTF-32BE</string>
    <string name="label_utf_32le">UTF-32LE</string>

    <string name="prefix_code_point">U+</string>

    <plurals name="size_format_code_point">
        <item quantity="one">(%d code point)</item>
        <item quantity="other">(%,d code points)</item>
    </plurals>
    <plurals name="size_format_java_char">
        <item quantity="one">(%d char)</item>
        <item quantity="other">(%,d chars)</item>
    </plurals>
    <plurals name="size_format_byte">
        <item quantity="one">(%d byte)</item>
        <item quantity="other">(%,d bytes)</item>
    </plurals>

</resources>
